--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
-    "mongodb": "^6.9.0",
-    "mongoose": "^7.3.4",
-    "nodemon": "^3.1.4"
+    "mongodb": "^6.9.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "chai": "^5.1.1",
     "chai-http": "^5.0.0",
+    "jest": "^29.7.0",
     "mocha": "^10.7.3",
+    "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
