--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "api-rest-w-mongodb-e-express",
+  "name": "library-rest-api",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "mocha tests/**/*.test.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.20.0",
+    "express": "^4.21.0",
     "mongodb": "^6.9.0"
   },
   "devDependencies": {
@@ -21,5 +22,19 @@
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
-  }
+  },
+  "description": "![Badge em Desenvolvimento](http://img.shields.io/static/v1?label=STATUS&message=EM%20DESENVOLVIMENTO&color=GREEN)",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brunosrd/library-rest-api.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brunosrd/library-rest-api/issues"
+  },
+  "homepage": "https://github.com/brunosrd/library-rest-api#readme"
 }
